end select image custom pick
end select image custom pick

--- a/app/src/main/res/layout/activity_main_chooser.xml
+++ b/app/src/main/res/layout/activity_main_chooser.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.mvp.fileChooser.FileChooserActivity">
+    android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list_files_pick"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_container_chooser"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        app:navGraph="@navigation/nav_graph_main" />
+
 
 </LinearLayout>
