--- a/app/src/main/res/layout/fragment_new_camera.xml
+++ b/app/src/main/res/layout/fragment_new_camera.xml
@@ -48,5 +48,24 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_round_camera_front_24" />
 
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@null"
+        android:id="@+id/btnBackCamera"
+        android:tooltipText="@string/text_back_app"
+        android:src="?attr/homeAsUpIndicator"
+        app:layout_constraintBottom_toTopOf="@+id/bt_takePicture"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="16dp"
+        android:tint="@color/white"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
