--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,9 @@
     <color name="white_transparent">#40FFFFFF</color>
     <color name="colorActiveDots">#FF4CAF50</color>
     <color name="colorInactiveDots">#204CAF50</color>
+
+    <color name="green_600">#FF43A047</color>
+    <color name="green_700">#FF388E3C</color>
+    <color name="green_800">#FF2E7D32</color>
+    <color name="green_900">#FF1B5E20</color>
 </resources>
